--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,6 +36,16 @@
       url: /analyticka_geometria_priamka
     - page: Rovina
       url: /analyticka_geometria_rovina
+
+    #- page: Vzájomná poloha bodu s priamkou a rovinou
+     # url: /analyticka_geometria_vzajomna_poloha_bod
+    - page:  Vzájomná poloha priamok
+      url: /analyticka_geometria_vzajomna_poloha_priamka
+    - page: Vzájomná poloha priamky a roviny
+      url: /analyticka_geometria_vzajomna_poloha_priamka_rovina
+    - page:  Vzájomná poloha rovín
+      url: /analyticka_geometria_vzajomna_poloha_rovina
+      
     - page: Použitie v počítačovej grafike
       url: /analyticka_geometria_v_pocitacovej_grafike
     - page: Počítačová grafika dnes
