--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,6 +39,8 @@
       url: /goniometricke_funkcie
     - page: Sínus, kosínus, tangens
       url: /goniometricke_funkcie_sinus_kosinus_tangens
+    - page: Vzorce
+      url: /goniometria_vzorce
     - page: Použitie goniometrických funkcií
       url: /pouzitie_goniometrickych_funkcii
       
@@ -65,16 +67,14 @@
       url: /analyticka_geometria_priamka
     - page: Rovina
       url: /analyticka_geometria_rovina
-
-    #- page: Vzájomná poloha bodu s priamkou a rovinou
-     # url: /analyticka_geometria_vzajomna_poloha_bod
     - page:  Vzájomná poloha priamok
       url: /analyticka_geometria_vzajomna_poloha_priamka
     - page: Vzájomná poloha priamky a roviny
       url: /analyticka_geometria_vzajomna_poloha_priamka_rovina
     - page:  Vzájomná poloha rovín
       url: /analyticka_geometria_vzajomna_poloha_rovina
-      
+    - page:  Skalárny súčin
+      url: /analyticka_geometria_skalarny_sucin
     - page: Použitie v počítačovej grafike
       url: /analyticka_geometria_v_pocitacovej_grafike
     - page: Počítačová grafika dnes
