--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ email: mathematikos.github@gmail.com
 description: >-
   Milujúci poznanie.
 baseurl: ""
-url: "https://mathematikos.github.io"
+url: "https://mathematikos.sk"
 github_username: mathematikos
 social:
   links:
