--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Mathematikos_sk
 author: Mathematikos
-email: mathematikos.github@gmail.com
+email: info@mathematikos.sk
 description: >-
   Milujúci poznanie.
 baseurl: ""
